Change log for package SOAs

Version 1.2, 04 August 2022

* modified function createAB and documentation in SOAs2plus_regular:
  the He, Cheng and Tang (2018) strength 2+ SOAs now
  have orthogonal columns more often, because the columns for matrix B are
  selected from all columns that are not used for A (instead of only the
  columns that were not eligible for A).
  WARNING: This change causes previous designs that have more columns than
  those eligible for A (e.g., more than 5 columns for s=2 and n=16)
  to be different from those constructed with earlier package versions.

Version 1.1, 04 June 2022

* added functions guide_SOAs and guide_SOAs_from_OA
  for providing guidance about implemented SOA constructions
* various improvements of documentation, and update of references
* BcolsFromBcolllist: changed vertex attributes to FALSE and TRUE
  instead of 0 and 1, in order to avoid a warning from package igraph
* Bug fix: function OSOAs_hadamard did not work for n=8
* Bug fix: handling of s in SOAs2plus_regular had a bug
  (leading to failure for s=9, because 9 was treated as a prime).
  Now, SOAs2plus_regular, SOA2plus_regulart and createAB
  (file utilitiesCreate.R) all have the same requirements for s:
  primes up to 19, powers of 2 up to 32, powers of 3 up to 27
  (presumably, the larger numbers do not really work well,
  but are in principle possible)

Version 1.0-1, 16 December 2021

* expanded description in DESCRIPTION file, and added a reference
* changed argument F to Fhat in internal function optimize
* made a few changes to the documentation, as requested by CRAN
* corrected a miswrite in a reference for createAB

Version 1.0, 11 December 2021

* first version submitted to CRAN